--- a/html/contact.html
+++ b/html/contact.html
@@ -1,49 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tortilla Hop</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fav_icon/favicon-16x16.png">
-    <link rel="manifest" href="/fav_icon/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Tortilla Hop</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/fav_icon/favicon-16x16.png">
+  <link rel="manifest" href="/fav_icon/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
-    <body>
-        <!-- menu navegacion bootstrap -->
-        <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="/index.html"><img class="logo" src="/img/tortilla_logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="routes.html">Routes</a>
-                <a class="nav-item nav-link" href="recipes.html">Recipes</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-              </div>
-            </div>            
+<body>
+  <!-- menu navegacion bootstrap -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html"><img class="logo" src="/img/tortilla_logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
+                class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="routes.html"><i class="fas fa-road"></i> Routes</a>
+            <a class="nav-item nav-link" href="recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
+            <a class="nav-item nav-link" href="contact.html"><i class="fas fa-address-book"></i> Contact</a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Material form contact -->
+<div class="card">
+
+  <h5 class="card-header info-color white-text text-center py-4">
+      <strong>Contact us</strong>
+  </h5>
+
+  <!--Card content-->
+  <div class="card-body px-lg-5 pt-0">
+
+      <!-- Form -->
+      <form class="text-center" style="color: #757575;" action="#!">
+
+          <!-- Name -->
+          <div class="md-form mt-3">
+              <input type="text" id="materialContactFormName" class="form-control">
+              <label for="materialContactFormName">Name</label>
           </div>
 
-    
+          <!-- E-mail -->
+          <div class="md-form">
+              <input type="email" id="materialContactFormEmail" class="form-control">
+              <label for="materialContactFormEmail">E-mail</label>
+          </div>
+
+          <!-- Subject -->
+          <span>Subject</span>
+          <select class="mdb-select">
+              <option value="" disabled>Choose option</option>
+              <option value="1" selected>Feedback</option>
+              <option value="2">Report a bug</option>
+              <option value="3">Feature request</option>
+              <option value="4">Feature request</option>
+          </select>
+
+          <!--Message-->
+          <div class="md-form">
+              <textarea id="materialContactFormMessage" class="form-control md-textarea" rows="3"></textarea>
+              <label for="materialContactFormMessage">Message</label>
+          </div>
+
+          <!-- Copy -->
+          <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialContactFormCopy">
+              <label class="form-check-label" for="materialContactFormCopy">Send me a copy of this message</label>
+          </div>
+
+          <!-- Send button -->
+          <button class="btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Send</button>
+
+      </form>
+      <!-- Form -->
+
+  </div>
+
+</div>
+<!-- Material form contact -->
 
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+
+
+
+
+
+
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
