--- a/html/recipes.html
+++ b/html/recipes.html
@@ -39,9 +39,9 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
                 class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="routes.html">Routes</a>
-            <a class="nav-item nav-link" href="recipes.html">Recipes</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
+            <a class="nav-item nav-link" href="routes.html"><i class="fas fa-road"></i> Routes</a>
+            <a class="nav-item nav-link" href="recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
+            <a class="nav-item nav-link" href="contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </div>
         </div>
       </div>
