--- a/html/routes.html
+++ b/html/routes.html
@@ -39,9 +39,9 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
                 class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
-            <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
-            <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
+            <a class="nav-item nav-link" href="/html/routes.html"> <i class="fas fa-road"></i> Routes</a>
+            <a class="nav-item nav-link" href="/html/recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
+            <a class="nav-item nav-link" href="/html/contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
 
     <!-- Page Heading -->
     <h2 class="my-4">ROUTES
-      <small>Discover Spain through tasting delicious tortillas de patata in different regions</small>
+      <p>Discover Spain through tasting delicious tortillas de patata in different regions</p>
     </h2>
 
     <!-- Project One -->
